<resources>
    <string name="app_name">Sky-Barge</string>

    <string name="message_network_problem">Please check your internet connectivity.</string>
    <string name="message_problem">Opps! Something went wrong, please try again.</string>
    <string name="problem_server">Problem connecting to server, Please try later.</string>
    <string name="some_error_occurred">Unable to connect to the service, please try again later.</string>
    <string name="timeout">Time out</string>
    <string name="no_internet_connection">No Internet connection.  Please check your network settings.</string>
    <string name="alert_internet_connection">Please check your internet connection.</string>

    <string name="enter_email">Please enter email</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_valid_emailid">Please enter valid emailid</string>
    <string name="sky_barge">Sky-Barge</string>
    <string name="employee_login">Employee Login</string>
    <string name="welcome">Welcome!</string>
    <string name="please_sign_in_to_continue">Please sign-in to continue</string>
    <string name="email_address">Email or Phone</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="title_activity_dashboard_home">DashboardHome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="swipe_to_punch_in">Swipe to Punch In</string>
    <string name="swipe_to_punch_out">Swipe to Punch Out</string>
    <string name="swipe_process">Processing</string>
    <string name="swipe_punch_out">Punched out!</string>
    <string name="attendence_summary">Attendence Summary</string>
    <string name="days">Days</string>
    <string name="presented_this_month">Presented this month</string>
    <string name="leaves_this_month">Leaves this month</string>
    <string name="today_punched_in">Today Punched-In</string>
    <string name="yesterday_punched">Yesterday Punched</string>
    <string name="last_month_credited">Last month credited</string>
    <string name="need_a_leave">Need a Leave?</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="change_password">Change Password</string>
    <string name="holiday_list">Holiday List</string>
    <string name="new_leaves">New Leaves</string>
    <string name="leave_policy">Leave Policy</string>
    <string name="assigned_stock">Assigned Asset</string>
    <string name="logout">Logout</string>
    <string name="type_of_leave">Type of Leave</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="joining_letter">Joining Letter</string>
    <string name="id_card">ID Card</string>
    <string name="access_card_no">Access Card No.</string>
    <string name="employee_no">Employee No.</string>
    <string name="designation">Designation</string>
    <string name="name">Name</string>
    <string name="spousename">Spouse Name</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="date_of_anniversary">Date of Anniversary</string>
    <string name="date_of_joining">Date of Joining</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="no_of_dependent">No. of dependent</string>
    <string name="driving_license">Driving License</string>
    <string name="email_id">Email-ID</string>

</resources>
