<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp40">

        <com.app.skybarge.utils.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:drawablePadding="@dimen/dp10"
            android:drawableRight="@drawable/rightsky"
            android:text="@string/sky_barge"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />

        <com.app.skybarge.utils.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:text="@string/employee_login"
            android:textColor="@color/textcolordark"
            android:textSize="@dimen/text_size_15" />

        <com.app.skybarge.utils.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginTop="@dimen/dp20"
            android:text="@string/welcome"
            android:textColor="@color/textcolordark"
            android:textSize="@dimen/text_size_25" />

        <com.app.skybarge.utils.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:paddingTop="@dimen/dp3"
            android:text="@string/please_sign_in_to_continue"
            android:textColor="@color/textcolorlight"
            android:textSize="@dimen/text_size_15" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dp14"
                android:textColor="@color/textcolordark"
                android:textSize="@dimen/text_size_15" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/dp5">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:gravity="start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/dp14"
                android:textColor="@color/textcolordark"
                android:textSize="@dimen/text_size_15" />
        </android.support.design.widget.TextInputLayout>

        <com.app.skybarge.utils.CustomTextView
            android:id="@+id/mTvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/dp10"
            android:padding="@dimen/dp5"
            android:text="@string/forgot_password"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/text_size_15" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/blue_button_selector"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_15" />

    </LinearLayout>
</RelativeLayout>

